--- a/.github/workflows/payment-api-pull-request.yml
+++ b/.github/workflows/payment-api-pull-request.yml
@@ -37,4 +37,4 @@ jobs:
 
       - name: Build
         run: |
-          ./gradlew verifierStubsJar :payment-api:build --skipInfraSetup -Dorg.gradle.daemon=false
+          ./gradlew verifierStubsJar :payment-api:build -PskipInfraSetup -Dorg.gradle.daemon=false
