--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     apply from: "$rootProject.projectDir/gradle/config/dependencies-plugins.gradle", to: buildscript
 }
 
-group = 'io.craftbase'
+group = 'com.hexagonaldemo'
 apply from: "$rootProject.projectDir/gradle/config/version-checker.gradle"
 apply from: "$rootProject.projectDir/gradle/config/infra.gradle"
 apply from: "$rootProject.projectDir/gradle/config/gradle-lint.gradle"
