--- a/ticket-api/infra/build.gradle
+++ b/ticket-api/infra/build.gradle
@@ -4,21 +4,23 @@ import org.springframework.cloud.contract.verifier.config.TestMode
 apply plugin: 'spring-cloud-contract'
 
 dependencies {
-    compile project.parent.project("domain")
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    implementation project.parent.project("domain")
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    implementation group: 'org.springframework.retry', name: 'spring-retry'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-stream-kafka'
 
-    compile group: 'javax.xml.bind', name: 'jaxb-api'
-    compile group: 'com.sun.xml.bind', name: 'jaxb-impl'
-    compile group: 'com.sun.xml.bind', name: 'jaxb-core'
-    compile group: 'javax.activation', name: 'activation'
-    compile group: 'mysql', name: 'mysql-connector-java'
-    compile group: 'com.zaxxer', name: 'HikariCP'
-    compile group: 'commons-codec', name: 'commons-codec'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api'
+    implementation group: 'com.sun.xml.bind', name: 'jaxb-impl'
+    implementation group: 'com.sun.xml.bind', name: 'jaxb-core'
+    implementation group: 'javax.activation', name: 'activation'
+    implementation group: 'mysql', name: 'mysql-connector-java'
+    implementation group: 'com.zaxxer', name: 'HikariCP'
+    implementation group: 'commons-codec', name: 'commons-codec'
 
-    compile group: 'io.springfox', name: 'springfox-swagger2'
-    compile group: 'io.springfox', name: 'springfox-swagger-ui'
+    implementation group: 'io.springfox', name: 'springfox-swagger2'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui'
 
     compileOnly("org.projectlombok:lombok")
 
@@ -26,17 +28,20 @@ dependencies {
     testAnnotationProcessor("org.projectlombok:lombok")
     testCompileOnly("org.projectlombok:lombok")
 
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testCompile group: 'org.springframework.cloud', name: 'spring-cloud-contract-stub-runner'
-    testCompile group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-verifier'
-    testCompile group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock'
-    testCompile group: 'com.github.tomakehurst', name: 'wiremock-standalone'
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-stub-runner'
+    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-verifier'
+    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock'
 
-    testCompile files("${project.rootDir}/payment-api/infra/build/libs/infra-stubs.jar")
+    testImplementation files("${project.rootDir}/payment-api/infra/build/libs/infra-stubs.jar")
 }
 
+tasks.generateContractTests.dependsOn rootProject.tasks.findByPath('payment-api:infra:verifierStubsJar')
+tasks.test.dependsOn rootProject.tasks.findByPath('payment-api:infra:verifierStubsJar')
+tasks.compileTestJava.dependsOn rootProject.tasks.findByPath('payment-api:infra:verifierStubsJar')
+tasks.processContractTestResources.dependsOn rootProject.tasks.findByPath('ticket-api:infra:generateContractTests')
+
 contracts {
-    generatedTestSourcesDir = project.file("src/test/java/")
     basePackageForTests = 'com.hexagonaldemo.ticketapi.contract'
     nameSuffixForTests = 'ContractTest'
     testFramework = TestFramework.JUNIT5
