--- a/gradle/config/repositories.gradle
+++ b/gradle/config/repositories.gradle
@@ -1,12 +1,11 @@
 repositories {
-    jcenter()
-    google()
     mavenCentral()
-    maven { url "https://dl.bintray.com/groovy/maven" }
+    google()
     maven { url "https://plugins.gradle.org/m2/" }
+    maven { url "https://repo.spring.io/release" }
     maven { url "https://repo.spring.io/snapshot" }
-    maven { url "https://repository.mulesoft.org/nexus/content/repositories/public/" }
+    maven { url "https://repo.spring.io/libs-snapshot" }
     maven { url "https://repo.spring.io/milestone/" }
-    maven { url "https://repo.spring.io/libs-snapshot/" }
+    maven { url "https://repository.mulesoft.org/nexus/content/repositories/public/" }
     maven { url "https://jitpack.io" }
 }
