--- a/payment-api/infra/build.gradle
+++ b/payment-api/infra/build.gradle
@@ -4,29 +4,32 @@ import org.springframework.cloud.contract.verifier.config.TestMode
 apply plugin: 'spring-cloud-contract'
 
 dependencies {
-    compile project.parent.project("domain")
+    implementation project.parent.project("domain")
     annotationProcessor group: 'org.springframework.boot', name:'spring-boot-configuration-processor'
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-stream-kafka'
+    implementation group: 'org.apache.kafka', name: 'connect-api'
 
-    compile group: 'javax.xml.bind', name: 'jaxb-api'
-    compile group: 'com.sun.xml.bind', name: 'jaxb-impl'
-    compile group: 'com.sun.xml.bind', name: 'jaxb-core'
-    compile group: 'javax.activation', name: 'activation'
-    compile group: 'mysql', name: 'mysql-connector-java'
-    compile group: 'com.zaxxer', name: 'HikariCP'
-    compile group: 'commons-codec', name: 'commons-codec'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api'
+    implementation group: 'com.sun.xml.bind', name: 'jaxb-impl'
+    implementation group: 'com.sun.xml.bind', name: 'jaxb-core'
+    implementation group: 'javax.activation', name: 'activation'
+    implementation group: 'mysql', name: 'mysql-connector-java'
+    implementation group: 'com.zaxxer', name: 'HikariCP'
+    implementation group: 'commons-codec', name: 'commons-codec'
 
-    compile group: 'io.springfox', name: 'springfox-swagger2'
-    compile group: 'io.springfox', name: 'springfox-swagger-ui'
+    implementation group: 'io.springfox', name: 'springfox-swagger2'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui'
 
-    testCompile group: 'io.rest-assured', name: 'rest-assured-all'
+    testImplementation group: 'io.rest-assured', name: 'rest-assured-all'
 
-    compile group: 'org.springframework.data', name: 'spring-data-redis'
-    compile group: 'org.springframework.integration', name: 'spring-integration-redis'
-    compile group: 'io.lettuce', name: 'lettuce-core'
+    implementation group: 'org.springframework.data', name: 'spring-data-redis'
+    implementation group: 'org.springframework.integration', name: 'spring-integration-redis'
+    implementation group: 'io.lettuce', name: 'lettuce-core'
 
     compileOnly("org.projectlombok:lombok")
 
@@ -34,14 +37,14 @@ dependencies {
     testAnnotationProcessor("org.projectlombok:lombok")
     testCompileOnly("org.projectlombok:lombok")
 
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testCompile group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-verifier'
-    testCompile group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock'
-    testCompile group: 'com.github.tomakehurst', name: 'wiremock-standalone'
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-verifier'
+    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock'
 }
 
+tasks.processContractTestResources.dependsOn rootProject.tasks.findByPath('payment-api:infra:generateContractTests')
+
 contracts {
-    generatedTestSourcesDir = project.file("src/test/java/")
     basePackageForTests = 'com.hexagonaldemo.paymentapi.contract'
     nameSuffixForTests = 'ContractTest'
     testFramework = TestFramework.JUNIT5
