--- a/ticket-api/domain/build.gradle
+++ b/ticket-api/domain/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    compile group: 'org.projectlombok', name: 'lombok'
-    compile group: 'org.springframework', name: 'spring-tx'
-    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
+    implementation group: 'org.projectlombok', name: 'lombok'
+    implementation group: 'org.springframework', name: 'spring-tx'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
 
     annotationProcessor("org.projectlombok:lombok")
     testAnnotationProcessor("org.projectlombok:lombok")
