adds retrieve ticket by account id feature

--- a/ticket-api/infra/src/test/resources/application.yml
+++ b/ticket-api/infra/src/test/resources/application.yml
@@ -91,6 +91,7 @@ logging:
   level:
     com.hexagonaldemo: DEBUG
     org.springframework: INFO
+    org.springframework.cloud: WARN
     org.springframework.integration: WARN
     org.springframework.scheduling: WARN
     org.hibernate.engine.jdbc.spi.SqlExceptionHelper: ERROR
