--- a/.github/workflows/payment-api.yml
+++ b/.github/workflows/payment-api.yml
@@ -56,6 +56,13 @@ jobs:
         with:
           java-version: 11
 
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
       - name: Cache gradle dependencies
         uses: actions/cache@v1
         with:
@@ -71,3 +78,9 @@ jobs:
         with:
           name: payment-api-jar
           path: payment-api/build/libs
+
+      - name: Analyze with Sonar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew sonarqube -PskipInfraSetup -Dorg.gradle.daemon=false --info
