--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -76,4 +76,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew jacocoTestReport sonarqube -PskipInfraSetup -Dorg.gradle.daemon=false --info
+        run: ./gradlew clean jacocoTestReport sonarqube -PskipInfraSetup -Dorg.gradle.daemon=false --info
