improves adapter tests of payment api

--- a/payment-api/infra/src/test/resources/application.yml
+++ b/payment-api/infra/src/test/resources/application.yml
@@ -64,6 +64,9 @@ server:
 # ADAPTERS
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+commandhandler:
+  enabled: false
+
 adapters:
   account:
     lock:
