--- a/ticket-api/infra/build.gradle
+++ b/ticket-api/infra/build.gradle
@@ -50,6 +50,6 @@ contracts {
     testMode = TestMode.EXPLICIT
 
     baseClassMappings {
-        baseClassMapping("ticket", "com.hexagonaldemo.ticketapi.contract.base.BaseTicketContract")
+        baseClassMapping("ticket", "com.hexagonaldemo.ticketapi.contract.BaseTicketContract")
     }
 }
